Add account_type
