# dto/create_employee.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateEmployeeRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=8"`
+}
